# cli

./: Cargo.toml  README.md
.github/workflows/: cli-release.yml
src/: main.rs  protocol.rs
src/commands/: play.rs
tests/: play_mode.rs  stdio_json_mode.rs
