[package]
name = "jurnalis-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jurnalis-cli"
path = "src/main.rs"

[features]
dev = ["jurnalis-engine/dev"]

[dependencies]
clap = { version = "4", features = ["derive"] }
jurnalis-engine = { path = "../jurnalis-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
jurnalis-engine = { path = "../jurnalis-engine", features = ["dev"] }
serde_json = "1"
